<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/txt_addVaccine"
        android:layout_width="379dp"
        android:layout_height="56dp"
        android:text="@string/txt_addVaccine"
        android:textColor="#004e63"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/txt_addVaccineType"
        android:layout_width="179dp"
        android:layout_height="41dp"
        android:text="@string/txt_addVaccineType"
        android:textColor="#004e63"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_addVaccine"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/txt_vaccineName"
        android:layout_width="231dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/txt_vaccineName"
        android:inputType="textPersonName"
        android:textColor="#004e63"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_addVaccineType"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/txt_addQuantity"
        android:layout_width="124dp"
        android:layout_height="39dp"
        android:text="@string/txt_addQuantity"
        android:textColor="#004e63"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_vaccineName"
        app:layout_constraintVertical_bias="0.124" />

    <EditText
        android:id="@+id/txt_vaccineQty"
        android:layout_width="142dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/txt_vaccineQty"
        android:inputType="number"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_addQuantity"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="165dp"
        android:layout_height="67dp"
        android:text="@string/btn_add"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="#004e63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_vaccineQty"
        app:layout_constraintVertical_bias="0.769"
        android:onClick="addRecords" />

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="79dp"
        android:layout_height="37dp"
        android:text="@string/txt_price"
        android:textColor="#004e63"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_addPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_vaccineQty"
        app:layout_constraintVertical_bias="0.591" />

    <EditText
        android:id="@+id/txt_addPrice"
        android:layout_width="131dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/txt_addPrice"
        android:inputType="numberDecimal"
        android:textColor="#004e63"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_vaccineQty"
        app:layout_constraintVertical_bias="0.645" />

</androidx.constraintlayout.widget.ConstraintLayout>