<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_signout"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:text="@string/txt_signout"
        android:textColor="#004e63"
        android:textColorHint="#004e63"
        android:textColorLink="#004e63"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/txt_stock"
        android:layout_width="124dp"
        android:layout_height="69dp"
        android:text="@string/txt_stock"
        android:textColor="#004e63"
        android:textColorHint="#004e63"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="412dp"
        android:layout_height="269dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_stock"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/vaccine01" />

    <Button
        android:id="@+id/btn_availableStock"
        android:layout_width="253dp"
        android:layout_height="62dp"
        android:text="@string/btn_availableStock"
        android:textSize="20sp"
        app:backgroundTint="#004e63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.286"
        android:onClick="btn_availableStock"/>

    <Button
        android:id="@+id/btn_requestedStock"
        android:layout_width="253dp"
        android:layout_height="62dp"
        android:text="@string/btn_requestedStock"
        android:textSize="20sp"
        app:backgroundTint="#004e63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_availableStock"
        android:onClick="btn_requestedStock"/>

</androidx.constraintlayout.widget.ConstraintLayout>