<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AvailableStock">

    <TextView
        android:id="@+id/txt_availableStock"
        android:layout_width="355dp"
        android:layout_height="62dp"
        android:text="@string/txt_availableStock"
        android:textColor="#004e63"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <ListView
        android:id="@+id/vaccine_list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="MissingConstraints" />;
        android:drawSelectorOnTop="false" />

    <Button
        android:id="@+id/btn_updateStock"
        android:layout_width="244dp"
        android:layout_height="57dp"
        android:text="@string/btn_updateStock"
        android:textSize="20sp"
        app:backgroundTint="#004e63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_availableStock"
        app:layout_constraintVertical_bias="0.664"
        android:onClick="btn_updateStock"/>

    <Button
        android:id="@+id/btn_addVaccine"
        android:layout_width="244dp"
        android:layout_height="57dp"
        android:text="@string/btn_addVaccine"
        android:textSize="20sp"
        app:backgroundTint="#004e63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_updateStock"
        app:layout_constraintVertical_bias="0.461"
        android:onClick="btn_addVaccine"/>

</androidx.constraintlayout.widget.ConstraintLayout>